CMTYAEM-898 Fixed long hyperlinks overflow issue

--- a/ui.frontend/src/main/webpack/components/container/scss/styles/_default.scss
+++ b/ui.frontend/src/main/webpack/components/container/scss/styles/_default.scss
@@ -224,6 +224,10 @@
         .cmp-title {
             margin: 0;
         }
+
+        a {
+            overflow-wrap: break-word;
+        }
     }
 
     .hide {
